# abstract-effects

./: LICENSE  README.md  interpreters.cabal
src/Control/: Interpret.hs
